# wcount

./: CHANGELOG.md  Cargo.toml  README.md
src/: args.rs  count.rs  exclusions.rs  main.rs  regexes.rs  result.rs  stream.rs  warning.rs
