[package]
name = "wcount"
version = "0.1.0"
authors = ["brogolem35"]
edition = "2021"
description = "CLI word counting tool."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
once_cell = "1.19.0"
regex = "1.10.4"
ustr = "1.0.0"
