[package]
name = "wcount"
version = "0.1.0"
authors = ["brogolem35"]
edition = "2021"
description = "CLI word counting tool."
license = "MIT"
repository = "https://github.com/Brogolem35/wcount"
keywords = ["cli", "word", "counter", "csv"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
ustr = "1.1"
